Corrected list alignment styles

--- a/client/resources/styles/app.scss
+++ b/client/resources/styles/app.scss
@@ -545,7 +545,7 @@ main {
     height: 80px;
 }
 
-.mdc-list--two-line .mdc-list-item__text {
+.mdc-list--avatar-list .mdc-list--two-line .mdc-list-item__text {
     top: 4px;
     position: relative;
 }
